--- a/ApiPiaget/appsettings.json
+++ b/ApiPiaget/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApiPiagetContext": "Server=UPGT-SPBR-PC149;Database=ApiPiaget;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
